Added lesson 2 and touched up a few things

--- a/intro.html
+++ b/intro.html
@@ -1,68 +1,69 @@
 <!DOCTYPE html>
 
 <html lang = "en">
-    <head>
-        <meta charset = "utf-8">
-        <meta name = "viewport" content = "width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name = "author" content = "Thebitspud">
+	<head>
+		<meta charset = "utf-8">
+		<meta name = "viewport" content = "width=device-width, initial-scale=1, shrink-to-fit=no">
+		<meta name = "author" content = "Thebitspud">
 
-        <!-- Bootstrap CSS -->
-        <link rel = "stylesheet" href = "https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity = "sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin = "anonymous">
-        <link rel = "icon" type = "image/x-icon" href = "assets/favicon.ico" />
-        <link href = "css/guide.css" rel = "stylesheet" type = "text/css" />
-        <title > Getting Started - Thebitspud's Webdev Guide </title>
-    </head>
+		<!-- Bootstrap CSS -->
+		<link rel = "stylesheet" href = "https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity = "sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin = "anonymous">
+		<link rel = "icon" type = "image/x-icon" href = "assets/favicon.ico" />
+		<link href = "css/guide.css" rel = "stylesheet" type = "text/css" />
+		<title > Getting Started - Thebitspud's Webdev Guide </title>
+	</head>
 
-    <body>
-        <nav class = "navbar navbar-expand-md navbar-dark bg-dark site-navbar">
-            <a class = "navbar-brand" href = "index.html">
-                <img src = "assets/webdev-logo.png" width = "30" height = "30" class = "d-inline-block align-top" alt = ""> Thebitspud's WebDev Guide
-            </a>
+	<body>
+		<nav class = "navbar navbar-expand-md navbar-dark bg-dark site-navbar">
+			<a class = "navbar-brand" href = "index.html">
+				<img src = "assets/webdev-logo.png" width = "30" height = "30" class = "d-inline-block align-top" alt = ""> Thebitspud's WebDev Guide
+			</a>
 
-            <button class = "navbar-toggler" type = "button" data-toggle = "collapse" data-target = "#navbar-collapse" aria-controls = "navbar-collapse" aria-expanded = "false" aria-label = "Toggle navigation">
-                <span class = "navbar-toggler-icon"></span>
-            </button>
+			<button class = "navbar-toggler" type = "button" data-toggle = "collapse" data-target = "#navbar-collapse" aria-controls = "navbar-collapse" aria-expanded = "false" aria-label = "Toggle navigation">
+				<span class = "navbar-toggler-icon"></span>
+			</button>
 
-            <div class = "collapse navbar-collapse" id = "navbar-collapse">
-                <div class = "navbar-nav nav-fill w-100">
-                    <a class = "nav-item nav-link" href = "index.html"> Index </a>
-                    <a class = "nav-item nav-link active" href = "intro.html"> Getting Started
-                        <span class = "sr-only"> (Current Page) </span>
-                    </a>
-                    <a class = "nav-item nav-link" href = "lessons.html"> Lessons </a>
-                    <a class = "nav-item nav-link" href = "resources.html"> Resources </a>
-                </div>
-            </div>
-        </nav>
+			<div class = "collapse navbar-collapse" id = "navbar-collapse">
+				<div class = "navbar-nav nav-fill w-100">
+					<a class = "nav-item nav-link" href = "index.html"> Index </a>
+					<a class = "nav-item nav-link active" href = "intro.html"> Getting Started
+						<span class = "sr-only"> (Current Page) </span>
+					</a>
+					<a class = "nav-item nav-link" href = "lessons.html"> Lessons </a>
+					<a class = "nav-item nav-link" href = "resources.html"> Resources </a>
+				</div>
+			</div>
+		</nav>
 
-        <h1 class = "display-1 text-center pt-5 mb-5" id = "title">Getting Started</h1>
+		<h1 class = "display-1 text-center pt-5 mb-5" id = "title">Getting Started</h1>
 
-        <h5 class = "big-text text-center mb-5" id = "subtitle">
-            In our increasingly digitalized world, learning web development is a great choice regardless of who you are.
-            <br>
-            <br>Refer to the following google slides presentation for more information on what web development is, why you should learn it, and what I will be covering on this website.
-            <br>
-            <br><a href = "http://bit.ly/2IMar6r" target = "_blank" class = "footer-link-blue">Course Orientation</a>
-            <br>
-            <br>Alternatively, you can jump right in and begin learning by clicking the link below.
-            <br>
-            <br><a href = "lessons.html" class = "footer-link-blue">HTML Lessons</a>
-        </h5>
+		<h5 class = "big-text text-center mb-5" id = "subtitle">
+			In our increasingly digitalized world, learning web development is a great choice regardless of who you are.
+			<br>
+			<br>Refer to the following google slides presentation for more information on what web development is, why you should learn it, and what I will be covering on this website.
+			<br>
+			<br><a href = "http://bit.ly/2IMar6r" target = "_blank" class = "footer-link-blue">Course Orientation</a>
+			<br>
+			<br>Alternatively, you can jump right in and begin learning by clicking the link below.
+			<br>
+			<br><a href = "lessons.html" class = "footer-link-blue">HTML Lessons</a>
+		</h5>
 
-        <div class = "text-center" id = "side-group">
-            <h5><a href = "https://github.com/thebitspud/webdevguide" target = "_blank" class = "footer-link-blue">Thebitspud's Webdev Guide 2018/19</a></h5>
-            <a href = "https://thebitspud.github.io" target = "_blank" class = "footer-link-grey pb-5">Site design by Thebitspud</a>
-        </div>
+		<hr>
+		<div class = "text-center mt-5" id = "side-group">
+			<h5><a href = "https://github.com/thebitspud/webdevguide" target = "_blank" class = "footer-link-blue">Thebitspud's Webdev Guide 2018/19</a></h5>
+			<a href = "https://thebitspud.github.io" target = "_blank" class = "footer-link-grey pb-5">Site design by Thebitspud</a>
+		</div>
 
-        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 		<script src = "https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity = "sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin = "anonymous"></script>
-        <script src = "https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-        integrity = "sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin = "anonymous"></script>
-        <script src = "https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-        integrity = "sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin = "anonymous"></script>
-    </body>
+		integrity = "sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+		crossorigin = "anonymous"></script>
+		<script src = "https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+		integrity = "sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+		crossorigin = "anonymous"></script>
+		<script src = "https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+		integrity = "sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+		crossorigin = "anonymous"></script>
+	</body>
 </html>
