--- a/lessons.html
+++ b/lessons.html
@@ -1,83 +1,83 @@
 <!DOCTYPE html>
 
 <html lang = "en">
-    <head>
-        <meta charset = "utf-8">
-        <meta name = "viewport" content = "width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name = "author" content = "Thebitspud">
-        <meta name = "description" content = "This is a simple site designed to help you learn and review HTML, CSS, and JavaScript.">
+	<head>
+		<meta charset = "utf-8">
+		<meta name = "viewport" content = "width=device-width, initial-scale=1, shrink-to-fit=no">
+		<meta name = "author" content = "Thebitspud">
+		<meta name = "description" content = "This is a simple site designed to help you learn and review HTML, CSS, and JavaScript.">
 
-        <!-- Bootstrap CSS -->
-        <link rel = "stylesheet" href = "https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity = "sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin = "anonymous">
-        <link rel = "icon" type = "image/x-icon" href = "assets/favicon.ico" />
-        <link href = "css/guide.css" rel = "stylesheet" type = "text/css" />
-        <title > Thebitspud's Webdev Guide </title>
-    </head>
+		<!-- Bootstrap CSS -->
+		<link rel = "stylesheet" href = "https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity = "sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin = "anonymous">
+		<link rel = "icon" type = "image/x-icon" href = "assets/favicon.ico" />
+		<link href = "css/guide.css" rel = "stylesheet" type = "text/css" />
+		<title > Thebitspud's Webdev Guide </title>
+	</head>
 
-    <body>
-        <nav class = "navbar navbar-expand-md navbar-dark bg-dark site-navbar">
-            <a class = "navbar-brand" href = "index.html">
-                <img src = "assets/webdev-logo.png" width = "30" height = "30" class = "d-inline-block align-top" alt = ""> Thebitspud's WebDev Guide
-            </a>
+	<body>
+		<nav class = "navbar navbar-expand-md navbar-dark bg-dark site-navbar">
+			<a class = "navbar-brand" href = "index.html">
+				<img src = "assets/webdev-logo.png" width = "30" height = "30" class = "d-inline-block align-top" alt = ""> Thebitspud's WebDev Guide
+			</a>
 
-            <button class = "navbar-toggler" type = "button" data-toggle = "collapse" data-target = "#navbar-collapse" aria-controls = "navbar-collapse" aria-expanded = "false" aria-label = "Toggle navigation">
-                <span class = "navbar-toggler-icon"></span>
-            </button>
+			<button class = "navbar-toggler" type = "button" data-toggle = "collapse" data-target = "#navbar-collapse" aria-controls = "navbar-collapse" aria-expanded = "false" aria-label = "Toggle navigation">
+				<span class = "navbar-toggler-icon"></span>
+			</button>
 
-            <div class = "collapse navbar-collapse" id = "navbar-collapse">
-                <div class = "navbar-nav nav-fill w-100">
-                    <a class = "nav-item nav-link" href = "index.html"> Index </a>
-                    <a class = "nav-item nav-link" href = "intro.html"> Getting Started </a>
-                    <a class = "nav-item nav-link active" href = "lessons.html"> Lessons
-                        <span class = "sr-only"> (Current Page) </span>
-                    </a>
-                    <a class = "nav-item nav-link" href = "resources.html"> Resources </a>
-                </div>
-            </div>
-        </nav>
+			<div class = "collapse navbar-collapse" id = "navbar-collapse">
+				<div class = "navbar-nav nav-fill w-100">
+					<a class = "nav-item nav-link" href = "index.html"> Index </a>
+					<a class = "nav-item nav-link" href = "intro.html"> Getting Started </a>
+					<a class = "nav-item nav-link active" href = "lessons.html"> Lessons
+						<span class = "sr-only"> (Current Page) </span>
+					</a>
+					<a class = "nav-item nav-link" href = "resources.html"> Resources </a>
+				</div>
+			</div>
+		</nav>
 
-        <h4 class = "text-center mt-5 display-4"><a href = "http://bit.ly/2IMar6r" target = "_blank" class = "footer-link-blue">Course Orientation</a></h3>
-        <h1 class = "display-2 text-center pt-5 mb-5">HTML Lessons</h1>
+		<h4 class = "text-center mt-5 display-4"><a href = "http://bit.ly/2IMar6r" target = "_blank" class = "footer-link-blue">Course Orientation</a></h3>
+		<h1 class = "display-2 text-center pt-5 mb-5">HTML Lessons</h1>
 
-        <div class = "container">
-            <div class = "row">
-                <div class = "col-lg-4">
-                    <h3><a href = "lessons/01.html" class = "footer-link-grey">Lesson 1: Intro to HTML</a></h3>
-                </div>
+		<div class = "container-fluid px-5">
+			<div class = "row">
+				<div class = "col-lg-4">
+					<h3 class = "mt-5"><a href = "lessons/01.html" class = "footer-link-grey">Lesson 1: Intro to HTML</a></h3>
+				</div>
 
-                <div class = "col-lg-4">
-                    <h3><a href = "lessons/02.html" class = "footer-link-grey">Lesson 2: Text Modifiers</a></h5>
-                    <h5><a href = "lessons/02a.html" class = "footer-link-blue">Lesson 2.1: Installing an IDE</a></h5>
-                </div>
+				<div class = "col-lg-4">
+					<h3 class = "mt-5"><a href = "lessons/02.html" class = "footer-link-grey">Lesson 2: Using HTML Tags</a></h5>
+				</div>
 
-                <div class = "col-lg-4">
-                    <h3><a href = "lessons/03.html" class = "footer-link-grey">Lesson 3: Links, Media, and Text Formatting</a></h3>
-                    <h5><a href = "lessons/03a.html" class = "footer-link-blue">Lesson 3.1: External Embeds</a></h5>
-                </div>
-            </div>
+				<div class = "col-lg-4">
+					<h3 class = "mt-5"><a href = "lessons/03.html" class = "footer-link-grey">Lesson 3: Text Alteration and Media</a></h3>
+				</div>
+			</div>
 
-            <div class = "row">
-                <div class = "col-lg-4">
-                    <h3> <a href = "lessons/04.html" class = "footer-link-grey">Lesson 4: Quotations and Tables</a></h3>
-                    <h5><a href = "lessons/04a.html" class = "footer-link-blue">Lesson 4.1: Reserved Symbols</a></h5>
-                </div>
-            </div>
-        </div>
+			<div class = "row">
+				<div class = "col-lg-4">
+					<h3 class = "mt-5"> <a href = "lessons/04.html" class = "footer-link-grey">Lesson 4: Quotations and Tables</a></h3>
+				</div>
+			</div>
+		</div>
 
-        <div class = "text-center">
-            <h5><a href = "https://github.com/thebitspud/webdevguide" target = "_blank" class = "footer-link-blue">Thebitspud's Webdev Guide 2018/19</a></h5>
-            <a href = "https://thebitspud.github.io" target = "_blank" class = "footer-link-grey pb-5">Site design by Thebitspud</a>
-        </div>
+		<br>
+		<br>
+		<hr>
+		<div class = "text-center mt-5">
+			<h5><a href = "https://github.com/thebitspud/webdevguide" target = "_blank" class = "footer-link-blue">Thebitspud's Webdev Guide 2018/19</a></h5>
+			<a href = "https://thebitspud.github.io" target = "_blank" class = "footer-link-grey pb-5">Site design by Thebitspud</a>
+		</div>
 
-        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 		<script src = "https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity = "sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin = "anonymous"></script>
-        <script src = "https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-        integrity = "sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin = "anonymous"></script>
-        <script src = "https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-        integrity = "sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin = "anonymous"></script>
-    </body>
+		integrity = "sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+		crossorigin = "anonymous"></script>
+		<script src = "https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+		integrity = "sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+		crossorigin = "anonymous"></script>
+		<script src = "https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+		integrity = "sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+		crossorigin = "anonymous"></script>
+	</body>
 </html>
