--- a/lessons/04.html
+++ b/lessons/04.html
@@ -1,54 +1,70 @@
 <!DOCTYPE html>
 
 <html lang = "en">
-    <head>
-        <meta charset = "utf-8">
-        <meta name = "viewport" content = "width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name = "author" content = "Thebitspud">
+	<head>
+		<meta charset = "utf-8">
+		<meta name = "viewport" content = "width=device-width, initial-scale=1, shrink-to-fit=no">
+		<meta name = "author" content = "Thebitspud">
 
-        <!-- Bootstrap CSS -->
-        <link rel = "stylesheet" href = "https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity = "sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin = "anonymous">
-        <link rel = "icon" type = "image/x-icon" href = "../assets/favicon.ico" />
-        <link href = "../css/guide.css" rel = "stylesheet" type = "text/css" />
-        <title > Lesson 4 - Thebitspud's Webdev Guide </title>
-    </head>
+		<!-- Bootstrap CSS -->
+		<link rel = "stylesheet" href = "https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity = "sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin = "anonymous">
+		<link rel = "icon" type = "image/x-icon" href = "../assets/favicon.ico" />
+		<link href = "../css/guide.css" rel = "stylesheet" type = "text/css" />
+		<title > Lesson 4 - Thebitspud's Webdev Guide </title>
+	</head>
 
-    <body>
-        <nav class = "navbar navbar-expand-md navbar-dark bg-dark site-navbar">
-            <a class = "navbar-brand" href = "index.html">
-                <img src = "../assets/webdev-logo.png" width = "30" height = "30" class = "d-inline-block align-top" alt = ""> Thebitspud's WebDev Guide
-            </a>
+	<body>
+		<nav class = "navbar navbar-expand-md navbar-dark bg-dark site-navbar">
+			<a class = "navbar-brand" href = "index.html">
+				<img src = "../assets/webdev-logo.png" width = "30" height = "30" class = "d-inline-block align-top" alt = ""> Thebitspud's WebDev Guide
+			</a>
 
-            <button class = "navbar-toggler" type = "button" data-toggle = "collapse" data-target = "#navbar-collapse" aria-controls = "navbar-collapse" aria-expanded = "false" aria-label = "Toggle navigation">
-                <span class = "navbar-toggler-icon"></span>
-            </button>
+			<button class = "navbar-toggler" type = "button" data-toggle = "collapse" data-target = "#navbar-collapse" aria-controls = "navbar-collapse" aria-expanded = "false" aria-label = "Toggle navigation">
+				<span class = "navbar-toggler-icon"></span>
+			</button>
 
-            <div class = "collapse navbar-collapse" id = "navbar-collapse">
-                <div class = "navbar-nav nav-fill w-100">
-                    <a class = "nav-item nav-link" href = "../index.html"> Index </a>
-                    <a class = "nav-item nav-link" href = "../intro.html"> Getting Started </a>
-                    <a class = "nav-item nav-link active" href = "../lessons.html"> Lessons
-                        <span class = "sr-only"> (Current Page) </span>
-                    </a>
-                    <a class = "nav-item nav-link" href = "../resources.html"> Resources </a>
-                </div>
-            </div>
-        </nav>
+			<div class = "collapse navbar-collapse" id = "navbar-collapse">
+				<div class = "navbar-nav nav-fill w-100">
+					<a class = "nav-item nav-link" href = "../index.html"> Index </a>
+					<a class = "nav-item nav-link" href = "../intro.html"> Getting Started </a>
+					<a class = "nav-item nav-link active" href = "../lessons.html"> Lessons
+						<span class = "sr-only"> (Current Page) </span>
+					</a>
+					<a class = "nav-item nav-link" href = "../resources.html"> Resources </a>
+				</div>
+			</div>
+		</nav>
 
-        <div class = "text-center">
-            <h5><a href = "https://github.com/thebitspud/webdevguide" target = "_blank" class = "footer-link-blue">Thebitspud's Webdev Guide 2018/19</a></h5>
-            <a href = "https://thebitspud.github.io" target = "_blank" class = "footer-link-grey pb-5">Site design by Thebitspud</a>
-        </div>
+		<h4 class = "text-center mt-5 display-4">Lesson 4: Quotations and Tables</h3>
+		<hr>
+		<h2 class = "my-5 px-5">
+			<div class = "container-fluid px-5">
+				<div class = "row">
+					<div class = "col-lg-6 text-left">
+						<a href = "03.html" class = "footer-link-grey">&#8592; Lesson 3</a>
+					</div>
 
-        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+					<div class = "col-lg-6 text-right">
+						<!--<a href = "05.html" class = "footer-link-grey">Lesson 5 &#8594;</a>-->
+					</div>
+				</div>
+			</div>
+		</h2>
+		<hr>
+		<div class = "text-center mt-5">
+			<h5><a href = "https://github.com/thebitspud/webdevguide" target = "_blank" class = "footer-link-blue">Thebitspud's Webdev Guide 2018/19</a></h5>
+			<a href = "https://thebitspud.github.io" target = "_blank" class = "footer-link-grey pb-5">Site design by Thebitspud</a>
+		</div>
+
+		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 		<script src = "https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity = "sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin = "anonymous"></script>
-        <script src = "https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-        integrity = "sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin = "anonymous"></script>
-        <script src = "https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-        integrity = "sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin = "anonymous"></script>
-    </body>
+		integrity = "sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+		crossorigin = "anonymous"></script>
+		<script src = "https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+		integrity = "sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+		crossorigin = "anonymous"></script>
+		<script src = "https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+		integrity = "sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+		crossorigin = "anonymous"></script>
+	</body>
 </html>
