Fixed some English

--- a/lessons/02.html
+++ b/lessons/02.html
@@ -68,7 +68,7 @@
 		<h2 class = "lesson-text mt-4">2.2: Common HTML Elements<hr></h2>
 
 		<p class = "lesson-text pt-2">
-			<code>&lt;title&gt;...&lt;/title&gt;</code> : Defines the title of the web page.<br>
+			<code>&lt;title&gt;...&lt;/title&gt;</code> : Defines the <strong>title</strong> of the web page.<br>
 		</p>
 		<pre class = "lesson-code">
 ...
@@ -167,7 +167,7 @@
 		<p class = "lesson-text mt-3"><strong>Above: An unordered list with three list items.</strong></p>
 
 		<p class = "lesson-text pt-3">
-			<code>&lt;ol&gt;...&lt;/ol&gt;</code> : An <strong>ordered list</strong> of items in a designated order. (numbered)<br>
+			<code>&lt;ol&gt;...&lt;/ol&gt;</code> : An <strong>ordered list</strong> of items. (numbered)<br>
 		</p>
 		<pre class = "lesson-code">
 ...
