Added part of lesson 3 and made a few minor modifications

--- a/lessons/02.html
+++ b/lessons/02.html
@@ -76,7 +76,7 @@
 		&lt;title&gt;My First Website&lt;/title&gt;
 	&lt;/head&gt;
 ...</pre>
-		<p class = "lesson-text mt-3"><strong>Above: Using the title tag in an HTML document. Try it out yourself!</strong></p>
+		<p class = "lesson-text mt-3"><strong>Above: Using the title tag. Try it out yourself!</strong></p>
 
 		<p class = "lesson-text pt-3">
 			<code>&lt;p&gt;...&lt;/p&gt;</code> : HTML <strong>paragraphs</strong> are block-level elements that are used for organizing and formatting text. Most web browsers will automatically indent paragraphs and insert breaks at the end.<br>
@@ -103,7 +103,7 @@
 		but only if I use a break.
 	&lt;p&gt;
 ...</pre>
-		<p class = "lesson-text mt-3"><strong>Above: Using line breaks in an HTML document. (Test it out!)</strong></p>
+		<p class = "lesson-text mt-3"><strong>Above: Using line breaks. (Test it out!)</strong></p>
 
 		<h2 class = "lesson-text mt-4">2.3: Inline Text Elements<hr></h2>
 
@@ -121,8 +121,8 @@
 		<p class = "lesson-text mt-3"><strong>Above: Using the h1, h2, and h6 tags.</strong></p>
 
 		<p class = "lesson-text pt-3">
-			<code>&lt;strong&gt;...&lt;/strong&gt;</code> : Text that is <strong>bolded</strong> on a web page.<br>
-			<code>&lt;em&gt;...&lt;/em&gt;</code> : Text that is <strong>italicized</strong> on a web page.<br>
+			<code>&lt;strong&gt;...&lt;/strong&gt;</code> : Text on a web page that is <strong>important</strong> (bolded). (Use this instead of <strong>&lt;b&gt;</strong>)<br>
+			<code>&lt;em&gt;...&lt;/em&gt;</code> : Text on a web page that is <strong>emphasized</strong> (italicized). (Use this instead of <strong>&lt;i&gt;</strong>)<br>
 		</p>
 		<pre class = "lesson-code">
 ...
@@ -146,7 +146,7 @@
 		&lt;del&gt;Java&lt;/del&gt; &lt;ins&gt;HTML&lt;/ins&gt; is the best programming language!
 	&lt;/p&gt;
 ...</pre>
-		<p class = "lesson-text mt-3"><strong>Above: Using the strong and em tags together in a paragraph.</strong></p>
+		<p class = "lesson-text mt-3"><strong>Above: Using the del and ins tags.</strong></p>
 
 		<p class = "lesson-text pt-3">
 			<code>&lt;ul&gt;...&lt;/ul&gt;</code> : An <strong>unordered list</strong> of items in no specific order. (bulleted)<br>
