--- a/lessons/04.html
+++ b/lessons/04.html
@@ -36,6 +36,11 @@
 		</nav>
 
 		<h4 class = "text-center mt-5 display-4">Lesson 4: Quotations and Tables</h3>
+		<h5 class = "big-text">
+			<br>
+			Now that you have a baseline understanding of what HTML is and how it is used, we will being moving into our next unit.
+		</h5>
+
 		<hr>
 		<h2 class = "my-5 px-5">
 			<div class = "container-fluid px-5">
