--- a/lessons/03.html
+++ b/lessons/03.html
@@ -35,11 +35,12 @@
 			</div>
 		</nav>
 
-		<h4 class = "text-center mt-5 display-4">Lesson 3: Text Alteration and Media</h3>
+		<h4 class = "text-center mt-5 display-4">Lesson 3: Text Alteration and Media</h4>
 		<h5 class = "big-text">
 			<br>
-			In Lesson 2, we used some common HTML elements to form websites with lists and modified text. This session will build off of what you learned in the last lesson and will introduce a few new topics as well. (links, images, and embeds) 
+			In Lesson 2, we used some common HTML elements to form websites with lists and modified text. This session will build off of what you learned in the last lesson and will introduce a few new topics as well.
 		</h5>
+		<br><hr>
 
 		<h2 class = "lesson-text mt-5">3.1: Inline text Alteration<hr></h2>
 
@@ -56,6 +57,7 @@
 	&lt;/p&gt;
 ...</pre>
 		<p class = "lesson-text mt-3"><strong>Above: Using superscripts and subscripts.</strong></p>
+		<h6 class = "lesson-text"><hr></h6>
 
 		<p class = "lesson-text pt-3">
 			<code>&lt;small&gt;...&lt;/small&gt;</code> : Text that slightly smaller than normal.<br>
@@ -67,7 +69,8 @@
 		&lt;small&gt;but this text is small!&lt;/small&gt;
 	&lt;/p&gt;
 ...</pre>
-		<p class = "lesson-text mt-3"><strong>Above: Using the small tag.</strong></p>
+		<p class = "lesson-text mt-3"><strong>Above: Using the <code>&lt;small&gt;</code> tag.</strong></p>
+		<h6 class = "lesson-text"><hr></h6>
 
 		<p class = "lesson-text pt-3">
 			<code>&lt;mark&gt;...&lt;/mark&gt;</code> : Highlighted text that denotes the significance of a specific segment in a passage.<br>
@@ -78,7 +81,8 @@
 		Remember to show up at &lt;mark&gt;7:20 AM&lt;/mark&gt; tomorrow!
 	&lt;/p&gt;
 ...</pre>
-		<p class = "lesson-text mt-3"><strong>Above: Using the mark tag to highlight important details.</strong></p>
+		<p class = "lesson-text mt-3"><strong>Above: Using the <code>&lt;mark&gt;</code> tag to highlight important details.</strong></p>
+		<h6 class = "lesson-text"><hr></h6>
 
 		<p class = "lesson-text pt-3">
 			<code>&lt;code&gt;...&lt;/code&gt;</code> : A segment of computer code.<br>
@@ -93,10 +97,11 @@
 		Press &lt;kbd&gt;Alt+F4&lt;/kbd&gt; to pay respects.
 	&lt;/p&gt;
 ...</pre>
-		<p class = "lesson-text mt-3"><strong>Above: Using the code, samp, and kbd tags. Although their output may appear the same initally, it's still generally a good practice to differentiate whenever possible. (We'll cover that more in-depth once we get into our CSS unit)</strong></p>
+		<p class = "lesson-text mt-3"><strong>Above: Using the <code>&lt;code&gt;</code>, <code>&lt;samp&gt;</code>, and <code>&lt;kbd&gt;</code> tags. Although their output may appear the same initally, it's still generally a good practice to differentiate whenever possible. (We'll cover this in-depth once we get into our CSS unit)</strong></p>
+		<h6 class = "lesson-text"><hr></h6>
 
 		<p class = "lesson-text pt-3">
-			<code>&lt;var&gt;...&lt;/var&gt;</code> : Specifies a variable. (This may appear visually similar to <strong>&lt;em&gt;</strong>)<br>
+			<code>&lt;var&gt;...&lt;/var&gt;</code> : Specifies a variable. This may appear visually similar to <code>&lt;em&gt;</code>.<br>
 		</p>
 		<pre class = "lesson-code">
 ...
@@ -104,10 +109,11 @@
 		&lt;var&gt;y&lt;/var&gt; = &lt;var&gt;ax&lt;sup&gt;2&lt;/sup&gt;&lt;/var&gt; + &lt;var&gt;bx&lt;/var&gt; + &lt;var&gt;c&lt;/var&gt;
 	&lt;/p&gt;
 ...</pre>
-		<p class = "lesson-text mt-3"><strong>Above: Using the var tag.</strong></p>
+		<p class = "lesson-text mt-3"><strong>Above: Using the <code>&lt;var&gt;</code> tag.</strong></p>
+		<h6 class = "lesson-text"><hr></h6>
 
 		<p class = "lesson-text pt-3">
-			<code>&lt;pre&gt;...&lt;/pre&gt;</code> : Preformatted text that will not ignore preexisting spaces and line breaks.<br>
+			<code>&lt;pre&gt;...&lt;/pre&gt;</code> : Preformatted text that will not ignore pre-existing spaces and line breaks.<br>
 		</p>
 		<pre class = "lesson-code">
 ...
@@ -120,9 +126,99 @@ s p  a   c    e     d
 		&lt;/pre&gt;
 	&lt;/body&gt;
 ...</pre>
-		<p class = "lesson-text mt-3"><strong>Above: Using the pre tag to manipulate spacing. (Note that the preformatted text segment will start spacing at the exact beginning of each new line)</strong></p>
+		<p class = "lesson-text mt-3"><strong>Above: Using the <code>&lt;pre&gt;</code> tag to manipulate spacing. Note that the preformatted text segment will start spacing at the exact beginning of each new line.</strong></p>
+		<h6 class = "lesson-text"><hr></h6>
 
-		<h2 class = "lesson-text mt-5">3.2: External Media<hr></h2>
+		<h2 class = "lesson-text mt-5">3.2: Links and Images<hr></h2>
+
+		<p class = "lesson-text pt-2">
+			<code>&lt;a href="..."&gt;...&lt;/a&gt;</code> : The <strong>anchor</strong> element creates a web link that directs the user to another site or file.
+			<br>
+			<br>The <code>href="..."</code> attribute stands for 'hyperlink reference' and is used to specify the target destination of the anchor. Additionally, you can add a <code>target="_blank"</code> attribute if you want the link to open in a separate tab. We will learn more about attributes and values once we begin our CSS unit.<br>
+		</p>
+		<pre class = "lesson-code">
+...
+	&lt;p&gt;
+		&lt;a href="index.html"&gt;Home page&lt;/a&gt;&lt;br&gt;
+		&lt;a href="https://vikingsdev.github.io/"&gt;Check out our website&lt;/a&gt;&lt;br&gt;
+		&lt;a href="https://www.google.com/" target="_blank"&gt;Search it up on Google!&lt;/a&gt;
+	&lt;/p&gt;
+...</pre>
+		<p class = "lesson-text mt-3"><strong>Above: Using the anchor element to direct to existing local and external sites.</strong></p>
+		<h6 class = "lesson-text"><hr></h6>
+
+		<p class = "lesson-text pt-2">
+			<code>&lt;img src="..." alt="..."&gt;</code> : Displays either a local or external <strong>image</strong> on your website.
+			<br>
+			<br> The source location of the image is accessed and modified through the <code>src="..."</code> attribute, while the <code>alt="..."</code> attribute specifies alternative text if the image is missing or cannot be displayed on a web page. Furthermore the <code>width="..."</code> and <code>height="..."</code> attributes can be used to declare the exact size of the image in pixels. (We will be covering dynamic scaling later on)
+		</p>
+		<pre class = "lesson-code">
+...
+	&lt;body&gt;
+		&lt;img src="shrek.jpg" alt = "shrek"&gt;&lt;br&gt;
+		&lt;img src="https://www.cscassets.com/recipes/wide_cknew/wide_25335.jpg" alt="spaghetti"&gt;&lt;br&gt;
+		&lt;img src="https://www.w3.org/html/logo/img/mark-only-icon.png" alt="html5 logo" width="100" height="100"&gt;
+	&lt;/body&gt;
+...</pre>
+		<p class = "lesson-text mt-3"><strong>Above: Using the customizable image element to display a variety of pictures.</strong></p>
+		<h6 class = "lesson-text"><hr></h6>
+
+		<h2 class = "lesson-text mt-5">3.3: External Embeds<hr></h2>
+		<p class = "lesson-text">An embed is an external widget that has been inserted into a web page. Many well known media sharing sites provide easy-to-use embeds that can be directly used in a web document. In this section, I will quickly cover how to use the HTML widgets provided by YouTube, Twitter, and Discord. </p>
+
+		<h4 class = "lesson-text mt-3">YouTube:</h4>
+		<h6 class = "lesson-text font-weight-light"><br>Step 1: Pick a YouTube video of your choice.<br><br>
+		Step 2: Click the <kbd>share</kbd> icon to the right of the like/dislike buttons.<br><br>
+		Step 3: Open the <kbd>embed</kbd> menu and modify video settings as you wish.<br><br>
+		Step 4: Copy the <code>&lt;iframe&gt;</code> element provided and paste it into your HTML document.</h6>
+		<br>
+		<pre class = "lesson-code">
+...
+	&lt;body&gt;
+		&lt;iframe width="560" height="315" src="https://www.youtube.com/embed/DwSm4WaE168" frameborder="0" allowfullscreen&gt;&lt;/iframe&gt;
+	&lt;/body&gt;
+...</pre>
+		<p class = "lesson-text mt-3"><strong>Above: Using the YouTube <code>&lt;iframe&gt;</code> embed widget.</strong></p>
+		<h6 class = "lesson-text"><hr></h6>
+
+		<h4 class = "lesson-text mt-4">Twitter:</h4>
+		<h6 class = "lesson-text font-weight-light"><br>Step 1: Go to <a href = "https://publish.twitter.com/#" class = "footer-link-blue" target = "_blank">Twitter Publish</a><br><br>
+		Step 2: Copy/paste a Twitter link.<br><br>
+		Step 3: Select one of the embed options presented.<br><br>
+		Step 4: Copy the element provided and paste it into your HTML document.<br><br>
+		Step 5: If you are using a timeline, I would recommend adding the <code>data-width="..."</code> and <code>data-height="..."</code> attributes to the <code>&lt;a&gt;</code> tag to make the widget a more manageable size.</h6>
+		<br>
+		<pre class = "lesson-code">
+...
+	&lt;body&gt;
+		&lt;!-- Twitter Timeline --&gt;
+		&lt;a class="twitter-timeline" href="https://twitter.com/Twitter?ref_src=twsrc%5Etfw" data-width="400" data-height="800"&gt;Tweets by Twitter&lt;/a&gt;
+		&lt;script async src="https://platform.twitter.com/widgets.js" charset="utf-8"&gt;&lt;/script&gt;
+		
+		&lt;!-- Individual Tweet --&gt;
+		&lt;blockquote class="twitter-tweet" data-lang="en"&gt;
+			&lt;p lang="en" dir="ltr"&gt;thank u, vote&lt;/p&gt;&mdash; Twitter (@Twitter)
+			&lt;a href="https://twitter.com/Twitter/status/1059574416911294469?ref_src=twsrc%5Etfw"&gt;November 5, 2018&lt;/a&gt;
+		&lt;/blockquote&gt;
+		&lt;script async src="https://platform.twitter.com/widgets.js" charset="utf-8"&gt;&lt;/script&gt;
+	&lt;/body&gt;
+...</pre>
+		<p class = "lesson-text mt-3"><strong>Above: Using Twitter embed widgets.</strong></p>
+		<h6 class = "lesson-text"><hr></h6>
+
+		<h4 class = "lesson-text mt-4">Discord:</h4>
+		<h6 class = "lesson-text font-weight-light"><br>Step 1: Select a Discord server that you have administrator privileges for.<br><br>
+		Step 2: Right click the server icon and go to <kbd>Server Settings --> Widget</kbd><br><br>
+		Step 3: Configure widget settings as you wish and ensure <kbd>Enable Server Widget</kbd> is activated.<br><br>
+		Step 4: Copy the premade <code>&lt;iframe&gt;</code> widget provided and paste it into your HTML document.</h6>
+		<br>
+		<pre class = "lesson-code">
+...
+	&lt;body&gt;
+		&lt;iframe src="https://discordapp.com/widget?id=451972671186534426&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"&gt;&lt;/iframe&gt;
+	&lt;/body&gt;
+...</pre>
+		<p class = "lesson-text mt-3"><strong>Above: Using the Discord embed widget.</strong></p>
 
 		<hr>
 		<h2 class = "my-5 px-5">
