--- a/lessons/03.html
+++ b/lessons/03.html
@@ -42,7 +42,7 @@
 		</h5>
 		<br><hr>
 
-		<h2 class = "lesson-text mt-5">3.1: Inline text Alteration<hr></h2>
+		<h2 class = "lesson-text mt-5">3.1: Inline Text Alteration<hr></h2>
 
 		<p class = "lesson-text pt-2">
 			<code>&lt;sup&gt;...&lt;/sup&gt;</code> : Text on a web page that is superscript.<br>
