--- a/lessons/04.html
+++ b/lessons/04.html
@@ -38,9 +38,161 @@
 		<h4 class = "text-center mt-5 display-4">Lesson 4: Quotations and Tables</h4>
 		<h5 class = "big-text">
 			<br>
-			Now that you have a baseline understanding of what HTML is and how it is used, we will being moving into our next unit.
+			In lessons 2 and 3, we learned how to effectively use HTML elements and various utilities to enhance our web pages. In today's lesson, we will wrap up our HTML text modification unit by working with quotations, description lists, and tables.
 		</h5>
 		<br><hr>
+
+		<h2 class = "lesson-text mt-5">4.1: Quotes and Information<hr></h2>
+
+		<p class = "lesson-text pt-2">
+			<code>&lt;hr&gt;</code> : Inserts a long horizontal line through the document block.<br>
+		</p>
+		<pre class = "lesson-code">
+...
+	&lt;h1&gt;Welcome to my website!&lt;/h1&gt;
+	&lt;hr&gt;
+	&lt;p&gt;On this website, you will learn about all sorts of interesting topics!&lt;/p&gt;
+...</pre>
+		<p class = "lesson-text mt-3"><strong>Above: Using the <code>&lt;hr&gt;</code> element.</strong></p>
+		<h6 class = "lesson-text"><hr></h6>
+
+		<p class = "lesson-text pt-3">
+			<code>&lt;q&gt;...&lt;/q&gt;</code> : Inserts a short inline quotation.<br>
+			<code>&lt;blockquote&gt;...&lt;/blockquote&gt;</code> : Inserts a long indented block-level quotation.<br>
+			For both of the above quotation styles, you can insert <code>cite="..."</code> to specify a source for your information.
+		</p>
+		<pre class = "lesson-code">
+...
+	&lt;p&gt;
+		Wikipedia is a &lt;q&gt;multilingual, web-based, free encyclopedia&lt;/q&gt; on the internet.
+		&lt;br&gt;
+		From Reddit's FAQ page:
+		&lt;blockquote cite="https://www.reddit.com/wiki/faq"&gt;
+			Reddit is a source for what's new and popular on the web.&lt;br&gt;
+			Users like you provide all of the content and decide, through voting, what's good and what's junk.&lt;br&gt;
+			Links that receive community approval bubble up towards #1, so the front page is constantly in motion and (hopefully) filled with fresh, interesting links.
+		&lt;/blockquote&gt;
+	&lt;/p&gt;
+...</pre>
+		<p class = "lesson-text mt-3"><strong>Above: Using the <code>&lt;q&gt;</code> and <code>&lt;blockquote&gt;</code> elements.</strong></p>
+		<h6 class = "lesson-text"><hr></h6>
+
+		<p class = "lesson-text pt-3">
+			<code>&lt;dfn&gt;...&lt;/dfn&gt;</code> : Italicized text that represents a term being defined. This may appear visually similar to <code>&lt;em&gt;</code>.<br>
+		</p>
+		<pre class = "lesson-code">
+...
+	&lt;p&gt;
+		In science, a &lt;dfn&gt;theory&lt;/dfn&gt; is a set of laws and principles that attempt to logically explain observations and phenomena using the scientific method.
+	&lt;/p&gt;
+...</pre>
+		<p class = "lesson-text mt-3"><strong>Above: Using the <code>&lt;dfn&gt;</code> tag.</strong></p>
+		<h6 class = "lesson-text"><hr></h6>
+
+		<p class = "lesson-text pt-3">
+			<code>&lt;cite&gt;...&lt;/cite&gt;</code> : Italicized text that is used to refer to another work. This may appear visually similar to <code>&lt;em&gt;</code>.<br>
+		</p>
+		<pre class = "lesson-code">
+...
+	&lt;p&gt;
+		I just read &lt;cite&gt;The Lord of the Rings&lt;/cite&gt; by J.R.R. Tolkein.
+	&lt;/p&gt;
+...</pre>
+		<p class = "lesson-text mt-3"><strong>Above: Using the <code>&lt;cite&gt;</code> tag.</strong></p>
+		<h6 class = "lesson-text"><hr></h6>
+
+		<p class = "lesson-text pt-3">
+			<code>&lt;abbr title="..."&gt;...&lt;/abbr&gt;</code> : Defines an acronym, abbreviation, or shortened term.<br>
+		</p>
+		<pre class = "lesson-code">
+...
+	&lt;p&gt;
+		The &lt;abbr title="Flat Earth Society"&gt;FES&lt;/abbr&gt; has members all around the globe.
+	&lt;/p&gt;
+...</pre>
+		<p class = "lesson-text mt-3"><strong>Above: Using the <code>&lt;abbr&gt;</code> element to define an abbreviation.</strong></p>
+		<h6 class = "lesson-text"><hr></h6>
+
+		<p class = "lesson-text pt-3">
+			<code>&lt;address&gt;...&lt;/address&gt;</code> : Defines the contact infromation and location of the author.<br>
+		</p>
+		<pre class = "lesson-code">
+...
+	&lt;p&gt;
+		&lt;address&gt;
+			Article by James Zhong.&lt;br&gt;
+			&lt;a href="thebitspud.github.io"&gt;thebitspud.github.io&lt;/a&gt;&lt;br&gt;
+			4321 Avenue St.&lt;br&gt;
+			A1B 2C3&lt;br&gt;
+			Burnaby, BC.&lt;br&gt;
+			Canada
+		&lt;/address&gt;
+	&lt;/p&gt;
+...</pre>
+		<p class = "lesson-text mt-3"><strong>Above: Using the <code>&lt;address&gt;</code> element to define contact information.</strong></p>
+		<h6 class = "lesson-text"><hr></h6>
+
+		<h2 class = "lesson-text mt-5">4.2: Lists and Tables<hr></h2>
+
+		<p class = "lesson-text pt-3">
+			<code>&lt;dl&gt;...&lt;/dl&gt;</code> : A <strong>description list</strong> that contains sets of terms and definitions.<br>
+			<code>&lt;dt&gt;...&lt;/dt&gt;</code> : The <strong>description title</strong> contains the term that is being defined.<br>
+			<code>&lt;dd&gt;...&lt;/dd&gt;</code> : The <strong>description definiton</strong> contains the actual definition of the term.<br>
+		</p>
+		<pre class = "lesson-code">
+...
+	&lt;body&gt;Welcome to my website!&lt;/h1&gt;
+		&lt;dl&gt;
+			&lt;dt&gt;Pen&lt;/dt&gt;
+				&lt;dd&gt;A writing instrument that is used to apply liquid ink to a surface.&lt;/dd&gt;
+			&lt;dt&gt;Pencil&lt;/dt&gt;
+				&lt;dd&gt;A writing instrument that creates marks through physical abrasion.&lt;/dd&gt;
+			&lt;dt&gt;Eraser&lt;/dt&gt;
+				&lt;dd&gt;A writing instrument that removes pencil marks from paper.&lt;/dd&gt;
+		&lt;/dl&gt;
+	&lt;body&gt;
+...</pre>
+		<p class = "lesson-text mt-3"><strong>Above: Creating a description list of terms and definitions using the <code>&lt;dl&gt;</code>, <code>&lt;dt&gt;</code>, and <code>&lt;dd&gt;</code> elements.</strong></p>
+		<h6 class = "lesson-text"><hr></h6>
+
+		<p class = "lesson-text pt-3">
+			<code>&lt;table&gt;...&lt;/table&gt;</code> : A simple <strong>table</strong> that contains corresponding series of information.<br>
+			<code>&lt;caption&gt;...&lt;/caption&gt;</code> : The <strong>title</strong> of a table.<br>
+			<code>&lt;tr&gt;...&lt;/tr&gt;</code> : A <strong>table row</strong> that contains data about a piece of information.<br>
+			<code>&lt;th&gt;...&lt;/th&gt;</code> : A <strong>table header</strong> that contains information about a set of information.<br>
+			<code>&lt;td&gt;...&lt;/td&gt;</code> : A <strong>table division</strong> that contains point data.<br>
+		</p>
+		<pre class = "lesson-code">
+...
+	&lt;body&gt;Welcome to my website!&lt;/h1&gt;
+		&lt;table&gt;
+			&lt;caption&gt;My savings&lt;/caption&gt;
+				
+			&lt;tr&gt;
+				&lt;th&gt;Month&lt;/th&gt;
+				&lt;th&gt;Money&lt;/th&gt;
+			&lt;/tr&gt;
+			&lt;tr&gt;
+				&lt;td&gt;January&lt;/td&gt;
+				&lt;td&gt;$80&lt;/td&gt;
+			&lt;/tr&gt;
+			&lt;tr&gt;
+				&lt;td&gt;February&lt;/td&gt;
+				&lt;td&gt;$100&lt;/td&gt;
+			&lt;/tr&gt;
+			&lt;tr&gt;
+				&lt;td&gt;March&lt;/td&gt;
+				&lt;td&gt;$150&lt;/td&gt;
+			&lt;/tr&gt;
+			&lt;tr>
+				&lt;td>April&lt;/td>
+				&lt;td>$140&lt;/td>
+			&lt;/tr>
+		&lt;/table>
+	&lt;body&gt;
+...</pre>
+		<p class = "lesson-text mt-3"><strong>Above: Creating a simple table using the <code>&lt;table&gt;</code>, <code>&lt;caption&gt;</code>, <code>&lt;tr&gt;</code>, <code>&lt;th&gt;</code>, and <code>&lt;td&gt;</code> elements.</strong></p>
+		<h6 class = "lesson-text"><hr></h6>
 
 		<hr>
 		<h2 class = "my-5 px-5">
